# MulticriteiaOptimization-Project

./: .gitignore  README.md  app.py  main.py  pyproject.toml  rapport.docx
Codes/: download.py  tick.json
datasets/: Communication_Services.csv  Consumer_Discretionary.csv  Consumer_Staples.csv  Energy.csv  Financials.csv  Health_Care.csv  Industrials.csv  Information_Technology.csv  Materials.csv  Real_Estate.csv  Utilities.csv  download.py  tick.json
notebooks/: frontier_data_epsilon.pkl  frontiere_theorique_markowitz.csv  step1.ipynb  step12.ipynb  step2-card-BF.ipynb  step2-card-Epsilon.ipynb  step2-card.ipynb  step2-nsga.ipynb  step2.ipynb  step2_cardinality_L1.ipynb  step3.ipynb
src/: app_utils.py  data.py  pareto_scalar.py  portfolio_utils.py  test.py
src/level1/: functions.py
src/level2/: cardinality_BF.py  cardinality_L1.py  cardinality_epsilon.py  functions.py
src/level3/: functions.py
src/streamlit_tools/: app.py  app_utils.py  graph.py  state.py
src/streamlit_tools/compute/: frontier_level2.py  frontier_markowitz.py
src/streamlit_tools/data/: market_data.py
src/streamlit_tools/pages/: home.py  settings.py
src/streamlit_tools/plots/: frontier_2d.py  frontier_3d.py
src/streamlit_tools/ui/: details.py  sidebar.py
