[project]
name = "project-multicritopti"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "cvxpy>=1.7.4",
    "matplotlib>=3.10.7",
    "notebook>=7.5.0",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "plotly>=6.5.0",
    "pymoo>=0.6.1.6",
    "streamlit>=1.52.0",
    "tqdm>=4.67.1",
    "yfinance>=0.2.66",
]
